--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,9 @@
   <div class="page">
     <header class="hero card">
       <div>
-        <div class="title">ChessNut</div>
-        <div class="subtitle">Créez ou rejoignez une partie</div>
+        <div class="title">ChessNut — Salle d'attente</div>
+        <div class="subtitle">Préparez-vous, invitez un ami et lancez la partie quand tout le monde est prêt.</div>
       </div>
-      <div style="text-align:right">
-        <img class="decor" src="/assets/chess-pieces/boards/8x8_pink_1Kbyte_gambit.svg" alt="decor" />
-      </div>
-  <svg class="floating-piece" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><path fill="#0b1220" d="M10 90 L30 10 L50 90 Z" /></svg>
     </header>
 
     <section class="card lobby">
