--- a/public/game.html
+++ b/public/game.html
@@ -111,6 +111,8 @@
     if(id.indexOf('revol') !== -1) return null;
   // sniper: select one of your pieces to bind the sniper effect (capture later without moving)
   if(id.indexOf('sniper') !== -1) return 'owned';
+  // doppelganger: select one of your pieces after playing the card (minimal flow)
+  if(id.indexOf('doppel') !== -1) return 'owned';
     // 'toucher c'est jouer' : require selecting an enemy piece as the card target
   if(id.indexOf('toucher') !== -1) return 'enemy';
   // la parrure: select an enemy queen to downgrade to a pawn
