--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
       <div>
         <div class="title">ChessNut — Salle d'attente</div>
         <div class="subtitle">Préparez-vous, invitez un ami et lancez la partie quand tout le monde est prêt.</div>
+        <div style="margin-top:8px">
+          <a href="https://github.com/Didictateur/ChessNut" target="_blank" rel="noopener noreferrer" class="btn-ghost" style="text-decoration:none;padding:6px 10px;font-size:0.95em;">Voir sur GitHub</a>
+        </div>
       </div>
     </header>
 
