--- a/public/game.html
+++ b/public/game.html
@@ -98,6 +98,30 @@
       }
     }
 
+    // small toast notification helper (non-blocking)
+    function showToast(message, opts){
+      try{
+        opts = opts || {};
+        const id = 'cn-toast';
+        const wrap = document.createElement('div');
+        wrap.className = 'cn-toast';
+        wrap.textContent = message || '';
+        wrap.style.position = 'fixed';
+        wrap.style.left = '50%';
+        wrap.style.transform = 'translateX(-50%)';
+        wrap.style.top = opts.top || '18px';
+        wrap.style.background = opts.background || 'rgba(0,0,0,0.8)';
+        wrap.style.color = opts.color || '#fff';
+        wrap.style.padding = '8px 12px';
+        wrap.style.borderRadius = '6px';
+        wrap.style.zIndex = 99999;
+        wrap.style.fontSize = '14px';
+        wrap.style.boxShadow = '0 6px 18px rgba(0,0,0,0.25)';
+        document.body.appendChild(wrap);
+        setTimeout(()=>{ try{ wrap.style.transition = 'opacity 300ms ease'; wrap.style.opacity = '0'; setTimeout(()=>{ try{ wrap.remove(); }catch(_){ } }, 320); }catch(_){ } }, opts.duration || 3500);
+      }catch(_){ }
+    }
+
     // play a short shuffle animation (shake + fade) when pieces are mixed
     function playShuffleAnimation(){
       if(!boardEl) return;
@@ -297,6 +321,24 @@
       });
       socket.on('card:lost', (data) => {
         try{ log('recv card:lost', data); showEffectNotification({ type: 'card_lost' }); }catch(e){ }
+      });
+      // private event: your played card was blocked (e.g., by a totem)
+      socket.on('card:play_blocked:private', (data) => {
+        try{
+          log('recv card:play_blocked:private', data);
+          const msg = (data && data.message) || 'Votre carte a été annulée par un effet.';
+          // show a toast and also log in the side log
+          showToast(msg, { background: 'rgba(200,60,60,0.95)' });
+          if(logEl) { log('notification:', msg); }
+        }catch(e){ console.warn('card:play_blocked:private handler error', e); }
+      });
+      // generic notification channel for targeted messages
+      socket.on('notification', (data) => {
+        try{
+          log('recv notification', data);
+          const msg = data && data.message ? data.message : (data && data.text) || 'Notification';
+          showToast(msg, { background: 'rgba(40,40,40,0.95)' });
+        }catch(e){ console.warn('notification handler error', e); }
       });
       // selection events (include moves) broadcasted by server
       socket.on('game:select', (data) => {
